@@ -1,9 +1,9 @@
 {
   "timestamp" : "2022-05-30T08:26:03Z",
   "count" : 1,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -1, +1 ],
+  "count_minmax" : [ 1, 1 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +0 ]
+  "uniques_decinc" : [ -0, +1 ]
 }
