@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-29T16:25:34Z",
+  "timestamp" : "2022-05-30T08:26:03Z",
   "count_outdated" : 2111,
   "uniques_outdated" : 403,
   "count" : 2146,
-  "uniques" : 425,
+  "uniques" : 426,
   "clones" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -65,6 +65,13 @@
       "timestamp": "2022-05-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
